Added form result page, organized css

--- a/P2/pages/contact.html
+++ b/P2/pages/contact.html
@@ -52,7 +52,7 @@
                         SEEDA Inc. 2000, 125 9 AVENUE SOUTHEAST, CALGARY, AB, T2G 0P6
                     </p>
                 </div>
-                <form action="#" class="order-request">
+                <form action="./form-submitted.html" class="order-request">
                     <div class="input-group-1">
                         <input type="text" id="fname" name="fname" placeholder="First Name">
                         <input type="text" id="lname" name="lname" placeholder="Last Name">
@@ -97,12 +97,13 @@
             <div class="footer-list">
                 <p>Company</p>
                 <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="http://www.sfu.ca/~pdelfana/IAT339/Style%20Guide/">Style guide</a>
                 <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
                 <p>Contact Us</p>
-                <a href="mailto:example@gmail.com">example@email.com</a>
+                <a href="mailto:seeda@gmail.com">seeda@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
