--- a/P2/pages/form-submitted.html
+++ b/P2/pages/form-submitted.html
@@ -30,68 +30,44 @@
     <div class="cover-medium">
         <div>
             <div class="wrap-content">
-                <h1>Stories</h1>
-                <h2>The latest news and stories on our company and events we are involved with.</h2>
-                <img src="../img/covers/stories-cover.jpg" alt="Person looking at wire connections">
+                <h1>Contact Us</h1>
+                <h2>Thank you for considering SEEDA!
+                </h2>
+                <img src="../img/covers/contact-us.jpg" alt="three people at a dock, looking to their left">
             </div>
         </div>
     </div>
 
-
     <main>
 
-        <div class="wrap-content">
-            <h3 class="body-heading">Latest stories</h3>
-            <div class="two-column stories">
-                <div class="article-card">
-                    <div>
-                        <h3>Hydraulic ram pump systems</h3>
-                        <p>It is time to investigate the alternatives for water pumps.
-                        </p>
-                        <a href="../pages/hydraulic-ramp.html">Read more ></a>
-                    </div>
-                    <img src="../img/article-1.jpg" alt="four people sitting in a cafe">
-                </div>
 
-                <div class="article-card">
-                    <div>
-                        <h3>It's time to step up</h3>
-                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
-                        </p>
-                        <a href="../pages/time-to-step-up.html">Read more ></a>
-                    </div>
-                    <img src="../img/article-2.jpg" alt="a person working in a lab">
-                </div>
+        <section class="wrap-content">
 
-                <div class="article-card">
-                    <div>
-                        <h3>Cleantech Forum Asia</h3>
-                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
-                        </p>
-                        <a href="../pages/cleantech-asia.html">Read more ></a>
-                    </div>
-                    <img src="../img/article-3.jpg" alt="a bulldozer ">
+            <h2>Contact form</h2>
+            <div class="two-column">
+                <div class="font-large">
+                    <p>Please complete the form so we can provide quick and efficient service. </p>
+                    <p>
+                        If urgent, please contact : 403-966-9848
+                        SEEDA Inc. 2000, 125 9 AVENUE SOUTHEAST, CALGARY, AB, T2G 0P6
+                    </p>
                 </div>
+                <div class="order-confirm font-large">
+                    <p>Thank you for contacting SEEDA. We will respond to your request shortly.</p>
+                  </div>
 
-                <div class="article-card">
-                    <div>
-                        <h3>Sustainable Development</h3>
-                        <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
-                        </p>
-                        <a href="../pages/sustainable-development.html">Read more ></a>
-                    </div>
-                    <img src="../img/article-4.jpg" alt="a laptop ">
-                </div>
             </div>
-        </div>
 
+
+
+        </section>
 
 
     </main>
 
 
-    
-    
+
+
     <footer>
         <div class="wrap-footer">
             <div class="footer-list">
@@ -123,6 +99,7 @@
             </div>
         </div>
     </footer>
+
 
 
 
