--- a/P2/pages/hydraulic-ramp.html
+++ b/P2/pages/hydraulic-ramp.html
@@ -173,12 +173,13 @@
             <div class="footer-list">
                 <p>Company</p>
                 <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="http://www.sfu.ca/~pdelfana/IAT339/Style%20Guide/">Style guide</a>
                 <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
                 <p>Contact Us</p>
-                <a href="mailto:example@gmail.com">example@email.com</a>
+                <a href="mailto:seeda@gmail.com">seeda@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
