--- a/P2/pages/portfolio.html
+++ b/P2/pages/portfolio.html
@@ -41,12 +41,6 @@
     <main>
         <div class="wrap-content">
             <h3 class="body-heading">All projects</h3>
-            <div class="other-project four-column">
-                <h6>Country</h6>
-                <h6>Years</h6>
-                <h6>Porjects</h6>
-                <h6>Comments</h6>
-            </div>
             <hr>
             <div class="other-project four-column">
                 <h4>Argentina</h4>
@@ -150,12 +144,13 @@
             <div class="footer-list">
                 <p>Company</p>
                 <a href="../pages/portfolio.html">Portfolio</a>
+                <a href="http://www.sfu.ca/~pdelfana/IAT339/Style%20Guide/">Style guide</a>
                 <a href="../pages/contact.html">Careers</a>
             </div>
 
             <div class="footer-list">
                 <p>Contact Us</p>
-                <a href="mailto:example@gmail.com">example@email.com</a>
+                <a href="mailto:seeda@gmail.com">seeda@email.com</a>
                 <a href="tel:+14039669848">+1 (403) 966 9848</a>
                 <a href="#">Suite 2000 125 9 Avenue SE, Calgary, AB, T2G OP6</a>
             </div>
