Added two remaining project pages

--- a/P2/index.html
+++ b/P2/index.html
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="card">
-                        <a href="#">
+                        <a href="./pages/economic-water.html">
                             <img src="./img/landing-2.jpeg" alt="project site" class="image-very-large">
                             <h3>Economic Water & Electricity</h3>
                             <h4>Providing water and electricity to rural residents.</h4>
@@ -160,7 +160,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="#">
+                        <a href="./pages/structural-steel.html">
                             <img src="./img/project-3.jpg" alt="project site" class="image-large">
                             <h3>Structural Steel Optimization</h3>
                             <h4>Using universal structural materials for modules to save steel, cut cost, and reduce
