--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -110,7 +110,7 @@
 
             <div class="projects">
                 <div class="project-card">
-                    <a href="#">
+                    <a href="../pages/economic-water.html">
                         <div>
                             <h3>Economic Water & Electricity</h3>
                             <p>Providing water and electricity to rural residents.</p>
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="project-card">
-                    <a href="#">
+                    <a href="../pages/structural-steel.html">
                         <div>
                             <h3>Structural Steel Optimization</h3>
                             <p>Using universal structural materials for modules to save steel, cut cost, and reduce
